added 4th test case

--- a/Functional/test-output/emailable-report.html
+++ b/Functional/test-output/emailable-report.html
@@ -8,19 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite1</th></tr>
-<tr><td><a href="#t0"> functionalTesting</a></td><td class="num">9</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">31,222</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8,601</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite1</th></tr></tbody><tbody id="t0"><tr><th colspan="4"> functionalTesting &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Test.TC_01_AddCustomersTest</td><td><a href="#m0">AddCust</a></td><td rowspan="1">1619882853187</td><td rowspan="1">2577</td></tr><tr class="passedodd"><td rowspan="4">Test.TC_02_LoginTest</td><td><a href="#m1">LogoVerification</a></td><td rowspan="1">1619882858965</td><td rowspan="1">756</td></tr><tr class="passedodd"><td><a href="#m2">btnClickable</a></td><td rowspan="1">1619882859722</td><td rowspan="1">245</td></tr><tr class="passedodd"><td><a href="#m3">display</a></td><td rowspan="1">1619882859969</td><td rowspan="1">787</td></tr><tr class="passedodd"><td><a href="#m4">getTitle</a></td><td rowspan="1">1619882857713</td><td rowspan="1">1251</td></tr><tr class="passedeven"><td rowspan="4">Test.TC_03_LogIn_TestDD</td><td><a href="#m5">loginDDT</a></td><td rowspan="4">1619882868239</td><td rowspan="4">4627</td></tr><tr class="passedeven"><td><a href="#m6">loginDDT</a></td></tr><tr class="passedeven"><td><a href="#m7">loginDDT</a></td></tr><tr class="passedeven"><td><a href="#m8">loginDDT</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Test.TC_04_Deposits</td><td><a href="#m0">addDeposit</a></td><td rowspan="1">1620159699595</td><td rowspan="1">5995</td></tr></tbody>
 </table>
-<h2> functionalTesting</h2><h3 id="m0">Test.TC_01_AddCustomersTest#AddCust</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Test.TC_02_LoginTest#LogoVerification</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">Test.TC_02_LoginTest#btnClickable</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">Test.TC_02_LoginTest#display</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">Test.TC_02_LoginTest#getTitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">Test.TC_03_LogIn_TestDD#loginDDT</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>mngr323566</td><td>EbAdyse</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">Test.TC_03_LogIn_TestDD#loginDDT</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>mngr323566</td><td>EbAdyse</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">Test.TC_03_LogIn_TestDD#loginDDT</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>mngr323566</td><td>EbAdyse</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">Test.TC_03_LogIn_TestDD#loginDDT</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>mngr323566</td><td>EbAdyse</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">Test.TC_04_Deposits#addDeposit</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
