--- a/Functional/test-output/old/Default suite/methods.html
+++ b/Functional/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="70f470">  <td>21/04/30 15:22:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.SetUp(java.lang.String)[pri:0, instance:Test.TC_01_AddCustomersTest@3315d2d7]">&gt;&gt;SetUp</td> 
+<tr bgcolor="70f470">  <td>21/05/04 16:21:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.SetUp(java.lang.String)[pri:0, instance:Test.TC_04_Deposits@3315d2d7]">&gt;&gt;SetUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@262445056</td>   <td></td> </tr>
-<tr bgcolor="9fedbd">  <td>21/04/30 15:22:45</td>   <td>1865</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_AddCustomersTest.AddCust()[pri:0, instance:Test.TC_01_AddCustomersTest@3315d2d7]">AddCust</td> 
+<tr bgcolor="9fedbd">  <td>21/05/04 16:21:39</td>   <td>1883</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_04_Deposits.addDeposit()[pri:0, instance:Test.TC_04_Deposits@3315d2d7]">addDeposit</td> 
   <td>main@262445056</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>21/04/30 15:22:48</td>   <td>4555</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Test.TC_01_AddCustomersTest@3315d2d7]">&lt;&lt;tearDown</td> 
+<tr bgcolor="70f470">  <td>21/05/04 16:21:45</td>   <td>7883</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Test.TC_04_Deposits@3315d2d7]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@262445056</td>   <td></td> </tr>
 </table>
