--- a/Functional/test-output/old/Suite1/methods.html
+++ b/Functional/test-output/old/Suite1/methods.html
@@ -1,34 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a4c865">  <td>21/05/01 11:27:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.SetUp(java.lang.String)[pri:0, instance:Test.TC_01_AddCustomersTest@61386958]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@542980314</td>   <td></td> </tr>
-<tr bgcolor="8c8dcf">  <td>21/05/01 11:27:33</td>   <td>1781</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_AddCustomersTest.AddCust()[pri:0, instance:Test.TC_01_AddCustomersTest@61386958]">AddCust</td> 
-  <td>main@542980314</td>   <td></td> </tr>
-<tr bgcolor="a4c865">  <td>21/05/01 11:27:35</td>   <td>4372</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Test.TC_01_AddCustomersTest@61386958]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@542980314</td>   <td></td> </tr>
-<tr bgcolor="a4c865">  <td>21/05/01 11:27:36</td>   <td>5051</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.SetUp(java.lang.String)[pri:0, instance:Test.TC_02_LoginTest@73ee04c8]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@542980314</td>   <td></td> </tr>
-<tr bgcolor="ceadd4">  <td>21/05/01 11:27:37</td>   <td>6307</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_LoginTest.getTitle()[pri:1, instance:Test.TC_02_LoginTest@73ee04c8]">getTitle</td> 
-  <td>main@542980314</td>   <td></td> </tr>
-<tr bgcolor="ceadd4">  <td>21/05/01 11:27:38</td>   <td>7559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_LoginTest.LogoVerification()[pri:2, instance:Test.TC_02_LoginTest@73ee04c8]">LogoVerification</td> 
-  <td>main@542980314</td>   <td></td> </tr>
-<tr bgcolor="ceadd4">  <td>21/05/01 11:27:39</td>   <td>8316</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_LoginTest.btnClickable()[pri:3, instance:Test.TC_02_LoginTest@73ee04c8]">btnClickable</td> 
-  <td>main@542980314</td>   <td></td> </tr>
-<tr bgcolor="ceadd4">  <td>21/05/01 11:27:39</td>   <td>8563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_LoginTest.display()[pri:4, instance:Test.TC_02_LoginTest@73ee04c8]">display</td> 
-  <td>main@542980314</td>   <td></td> </tr>
-<tr bgcolor="a4c865">  <td>21/05/01 11:27:40</td>   <td>9352</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Test.TC_02_LoginTest@73ee04c8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@542980314</td>   <td></td> </tr>
-<tr bgcolor="a4c865">  <td>21/05/01 11:27:41</td>   <td>10036</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.SetUp(java.lang.String)[pri:0, instance:Test.TC_03_LogIn_TestDD@7671cb68]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@542980314</td>   <td></td> </tr>
-<tr bgcolor="aed86c">  <td>21/05/01 11:27:43</td>   <td>11924</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_LogIn_TestDD.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:Test.TC_03_LogIn_TestDD@7671cb68]">loginDDT</td> 
-  <td>main@542980314</td>   <td></td> </tr>
-<tr bgcolor="aed86c">  <td>21/05/01 11:27:48</td>   <td>16833</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_LogIn_TestDD.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:Test.TC_03_LogIn_TestDD@7671cb68]">loginDDT</td> 
-  <td>main@542980314</td>   <td></td> </tr>
-<tr bgcolor="aed86c">  <td>21/05/01 11:27:52</td>   <td>21462</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_LogIn_TestDD.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:Test.TC_03_LogIn_TestDD@7671cb68]">loginDDT</td> 
-  <td>main@542980314</td>   <td></td> </tr>
-<tr bgcolor="aed86c">  <td>21/05/01 11:27:57</td>   <td>25851</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_LogIn_TestDD.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:Test.TC_03_LogIn_TestDD@7671cb68]">loginDDT</td> 
-  <td>main@542980314</td>   <td></td> </tr>
-<tr bgcolor="a4c865">  <td>21/05/01 11:28:01</td>   <td>30362</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Test.TC_03_LogIn_TestDD@7671cb68]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@542980314</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>21/05/04 16:13:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.SetUp(java.lang.String)[pri:0, instance:Test.TC_01_AddCustomersTest@7671cb68]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1865516976</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>21/05/04 16:13:45</td>   <td>1746</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_AddCustomersTest.AddCust()[pri:0, instance:Test.TC_01_AddCustomersTest@7671cb68]">AddCust</td> 
+  <td>main@1865516976</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>21/05/04 16:13:48</td>   <td>4491</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Test.TC_01_AddCustomersTest@7671cb68]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1865516976</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>21/05/04 16:13:49</td>   <td>5222</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.SetUp(java.lang.String)[pri:0, instance:Test.TC_02_LoginTest@49dc7102]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1865516976</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>21/05/04 16:13:50</td>   <td>6504</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_LoginTest.getTitle()[pri:1, instance:Test.TC_02_LoginTest@49dc7102]">getTitle</td> 
+  <td>main@1865516976</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>21/05/04 16:13:53</td>   <td>9446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_LoginTest.LogoVerification()[pri:2, instance:Test.TC_02_LoginTest@49dc7102]">LogoVerification</td> 
+  <td>main@1865516976</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>21/05/04 16:13:54</td>   <td>10256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_LoginTest.btnClickable()[pri:3, instance:Test.TC_02_LoginTest@49dc7102]">btnClickable</td> 
+  <td>main@1865516976</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>21/05/04 16:13:54</td>   <td>10595</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_LoginTest.display()[pri:4, instance:Test.TC_02_LoginTest@49dc7102]">display</td> 
+  <td>main@1865516976</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>21/05/04 16:13:55</td>   <td>11415</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Test.TC_02_LoginTest@49dc7102]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1865516976</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>21/05/04 16:13:56</td>   <td>12119</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.SetUp(java.lang.String)[pri:0, instance:Test.TC_03_LogIn_TestDD@6b8ca3c8]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1865516976</td>   <td></td> </tr>
+<tr bgcolor="aed86c">  <td>21/05/04 16:13:58</td>   <td>14018</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_LogIn_TestDD.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:Test.TC_03_LogIn_TestDD@6b8ca3c8]">loginDDT</td> 
+  <td>main@1865516976</td>   <td></td> </tr>
+<tr bgcolor="aed86c">  <td>21/05/04 16:14:07</td>   <td>23414</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_LogIn_TestDD.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:Test.TC_03_LogIn_TestDD@6b8ca3c8]">loginDDT</td> 
+  <td>main@1865516976</td>   <td></td> </tr>
+<tr bgcolor="aed86c">  <td>21/05/04 16:14:14</td>   <td>30744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_LogIn_TestDD.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:Test.TC_03_LogIn_TestDD@6b8ca3c8]">loginDDT</td> 
+  <td>main@1865516976</td>   <td></td> </tr>
+<tr bgcolor="aed86c">  <td>21/05/04 16:14:22</td>   <td>38424</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_LogIn_TestDD.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:Test.TC_03_LogIn_TestDD@6b8ca3c8]">loginDDT</td> 
+  <td>main@1865516976</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>21/05/04 16:14:29</td>   <td>45474</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Test.TC_03_LogIn_TestDD@6b8ca3c8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1865516976</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>21/05/04 16:14:30</td>   <td>46153</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.SetUp(java.lang.String)[pri:0, instance:Test.TC_04_Deposits@68c72235]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1865516976</td>   <td></td> </tr>
+<tr bgcolor="b2dba3">  <td>21/05/04 16:14:31</td>   <td>47399</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_04_Deposits.addDeposit()[pri:0, instance:Test.TC_04_Deposits@68c72235]">addDeposit</td> 
+  <td>main@1865516976</td>   <td></td> </tr>
+<tr bgcolor="d88cf5">  <td>21/05/04 16:14:36</td>   <td>52501</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Test.TC_04_Deposits@68c72235]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1865516976</td>   <td></td> </tr>
 </table>
